@@ -12,4 +12,12 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.apache.commons:commons-dbcp2:2.9.0'
     implementation 'com.h2database:h2:2.1.214'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.mockito:mockito-junit-jupiter'
+    testImplementation 'org.mockito:mockito-core:3.12.4'
+}
+
+test {
+    jvmArgs '--enable-preview'
+    useJUnitPlatform()
 }
